// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render section with given colSpan 1`] = `
<div>
  <div
    class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Test
      </div>
    </div>
    <p>
      Test
    </p>
  </div>
</div>
`;

exports[`Render section without label 1`] = `
<div>
  <div
    class="section gridSection colSpan colSpan-8 space-before-0 space-after-0"
  >
    <div>
      Test
    </div>
  </div>
</div>
`;

exports[`Render section without label but with divider 1`] = `
<div>
  <div
    class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="item dividerContainer colSpan colSpan-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      />
    </div>
    <p>
      Test
    </p>
  </div>
</div>
`;
